apply suggestions